[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "runavel"
version = "0.1.0"
description = "Rúnavél — The Rune Machine. Cipher, divination, and visualization for the Elder Futhark."
authors = [
    {name = "Runa Gridweaver Freyjasdottir"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Artistic Software",
    "Topic :: Cryptography",
    "Topic :: Games/Entertainment :: Role-Playing",
]

[project.scripts]
runavel = "runavel.cli:main"

[tool.setuptools.packages.find]
include = ["runavel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]